--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
       
     <table id="theTable">
       <tr>
-        <th>id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Gender</th>
-        <th>DOB</th>
-        <th>Height</th>
-        <th>Weight</th>
-        <th>Eye Color</th>
-        <th>Ocupation</th>
-        <th>Parrents</th>
-        <th>Current Spouse</th>
+        <th id="id">id</th>
+        <th id="firstName">First Name</th>
+        <th id="lastName">Last Name</th>
+        <th id="gender">Gender</th>
+        <th id="dob">DOB</th>
+        <th id="height">Height</th>
+        <t id="weight">Weight</th>
+        <th id="eyeColor">Eye Color</th>
+        <th id="occupation">Ocupation</th>
+        <th id="parents">Parents</th>
+        <th id="currentSpouse">Current Spouse</th>
       </tr>
       <tr>
         <td>1234567</td>
-        <td id="fname_field">Ricky</td>
+        <td>Ricky</td>
         <td>Bobby</td>
         <td>Male</td>
         <td>9/4/55</td>
@@ -54,3 +54,5 @@
     <script src="app.js"></script>
   </body>
 </html>
+
+<!--yea-->
