added header to inform user of known issues.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <form id="keyWordForm">
         <label for="keyWords">Search by keywords DO NOT USE COMMAS OR COLONS ONLY SPACES. Except for birthdays you can
-          use mm/dd/yyyy format.</label><br>
+          use mm/dd/yyyy format. Also, you mut press submit button, do not press ENTER, it doesn't work. Refreshing window is only way to clear the table and start fresh.</label><br>
         <input type="text" id="keyWords" name="keyWords" value="Only button submits"><br><br>
         <input class="btn btn-primary" id="searchButton" type="button" onclick="searchByKeyWord()" enter="submit"
           value="Submit">
